--- a/src/scss/sections/taskPage/_faq.scss
+++ b/src/scss/sections/taskPage/_faq.scss
@@ -8,7 +8,7 @@
   @media (max-width: 999px) {
     padding: 0;
   }
-  @media (min-width: 999px) and (max-width: 1199px) {
+  @media (min-width: 999px) and (max-width: 1299px) {
     padding: 0 80px;
   }
 }
