--- a/src/scss/sections/taskPage/smartphone.scss
+++ b/src/scss/sections/taskPage/smartphone.scss
@@ -8,7 +8,7 @@
     margin: 56px auto;
     padding: 0 24px;
   }
-  @media (min-width: 768px) and (max-width: 1199px) {
+  @media (min-width: 768px) and (max-width: 1299px) {
     padding: 0 80px;
   }
 
